# dcpl

./: LICENSE  README.org  dcpl.cabal  readme.org
DCPL/: PostFix.hs
haskell/: dcpl.cabal
haskell/DCPL/: PostFix.hs
racket/: postfix.rkt
scheme/: postfix.scm
