Name:                dcpl
Version:             0.1
Synopsis:            Design Concepts in Programming Languages
Description:         Implementations of the languages in the book
Homepage:            http://github.com/jaor/dcpl
License:             BSD3
License-file:        LICENSE
Author:              Jose Antonio Ortega Ruiz
Maintainer:          jao@gnu.org
Category:            Language
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  -- Modules exported by the library.
  Exposed-modules:   DCPL.PostFix

  -- Packages needed in order to build this package.
  Build-depends:     base >= 4.0

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:

